# OmniCrop

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
OmniCrop/: __init__.py
omnicrop/: __init__.py
src/: OmniCrop.hpp  bindings.cpp
tests/: test.py  test_omnicrop.cpp
