[build-system]
# 切换到 scikit-build-core，它能完美处理 CMake 项目
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.13.0"]
build-backend = "scikit_build_core.build"

[project]
name = "omnicrop"
version = "1.0.0"
description = "High-performance iterative cropping engine based on C++ and DIoU."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name"}]

[tool.scikit-build]
# 指定 CMake 找到编译好的 .so 应该放在哪个 Python 包里
wheel.expand = true
wheel.install-dir = "omnicrop"
# 确保在编译时搜索 pybind11
cmake.args = ["-Dpybind11_DIR:PATH=${PYTHON_PREFIX}/lib/python${PYTHON_VERSION}/site-packages/pybind11/share/cmake/pybind11"]

[tool.cibuildwheel]
# 自动在构建环境安装依赖
before-build = "pip install \"pybind11>=2.13.0\""
build-verbosity = "1"