[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.13.0"]
build-backend = "scikit_build_core.build"

[project]
name = "omnicrop"
version = "1.0.0"
description = "High-performance iterative cropping engine based on C++ and DIoU."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name"}]

[tool.scikit-build]
# 明确告诉构建工具，我们的 Python 包名叫 omnicrop
wheel.packages = ["omnicrop"]

[tool.cibuildwheel]
# 构建前在容器环境中安装依赖
before-build = "pip install \"pybind11>=2.13.0\""
build-verbosity = "1"

[tool.cibuildwheel.linux]
# 修复 Linux 下的 wheel 标签 (manylinux)
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"