[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.13.0"]
build-backend = "scikit_build_core.build"

[project]
name = "omnicrop"
version = "1.0.0"
description = "High-performance iterative cropping engine based on C++ and DIoU."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Leon"}]

[tool.scikit-build]
# 声明 Python 源码包所在的目录
wheel.packages = ["omnicrop"]

[tool.cibuildwheel]
build-verbosity = "1"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"